tests/fixtures/positive/supply-chain/compile-sdk-mismatch-across-modules/settings.gradle.kts
rootProject.name = "compile-sdk-mismatch-positive"

include(":feature:a", ":feature:b")
