tests/fixtures/negative/supply-chain/compile-sdk-mismatch-across-modules/settings.gradle.kts
rootProject.name = "compile-sdk-mismatch-negative"

include(":feature:a", ":feature:b")
